// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`playground-environments-exist > no environments in api definition 1`] = `
[
  {
    "message": "Staging are not valid environments",
    "nodePath": [
      "navigation",
      "0",
      "api",
    ],
    "relativeFilepath": "docs.yml",
    "severity": "error",
  },
]
`;

exports[`playground-environments-exist > non existent environment specified 1`] = `
[
  {
    "message": "Staging are not valid environments. Choose from Production, Dev",
    "nodePath": [
      "navigation",
      "0",
      "api",
    ],
    "relativeFilepath": "docs.yml",
    "severity": "error",
  },
]
`;
